--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KavhDex - Easy Pokédex</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="images/kavhdex_logo.png" type="image/x-icon">
 </head>
 <body>
     <!-- HEADER -->
